# Infoarena

./: .gitignore  .markdownlint.json  README.md
A+B (adunare)/: CMakeLists.txt  CMakeLists.txt.bak  adunare.cpp
Algorithms/A+B/: A+B.url  CMakeLists.txt.bak  adunare.cpp
Algorithms/bfs_breadth-first-search/: bfs.cpp
Algorithms/binary_search/: Căutare binară.url  cautbin.cpp  cautbin.in  cautbin.out
Algorithms/binary_search_factorial/: factorial.cpp
Algorithms/cmmdc/: CMMDC.url  cmmdc.cpp
Algorithms/eratosthenes_sieve/: Ciur.url  ciur.cpp
Algorithms/euclid2/: Euclid2.url
Algorithms/euclid3/: euclid3.cpp
Algorithms/euclid_extended/: Euclid3.url  euclid3.in  euclid3.out
Algorithms/euclid_simple/: cmmdc.cpp
Algorithms/euclid_stein/: euclid2.cpp
Algorithms/factorial/: Factorial.url
Algorithms/fast_exponential/: Exponentiere rapida.url  lgput.cpp
Algorithms/prime_factorisation/: Divizor si multiplu.url  divmul.cpp
Hello_World/: CMakeLists.txt  CMakeLists.txt.bak  hello_world.cpp
Tasks/Hello_World/: CMakeLists.txt.bak  hello_world.cpp
Tasks/task4/: task4.cpp  task4.in
Tasks/text1/: Text.url  text.cpp  text.in
Tasks/text3/: Text3.url  text3.cpp  text3.in  text3.out
Tasks/text4/: Text4.url  text4.cpp  text4.in  text4.out
euclid2/: euclid2.cpp
